--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,63 @@
 *{
-    padding: 0px;
+    padding: 0px; 
     margin: 0px;
     outline: none;
     border: none;
 }
 
-html,body{
-    background: red;
-    width: 100%;
-    height: 100%;
+.container .page:nth-child(1){
+    background: rosybrown;
+}
+.container .page:nth-child(2){
+    background: rosybrown;
+}
+.container .page:nth-child(3){
+    background: rosybrown;
+}
+.container .page:nth-child(4){
+    background: rosybrown;
+}
+@-webkit-keyframes zoomInUp{
+
+    from {
+        opacity: 0;
+        -webkit-transform: scale3d(.1, .1, .1) translate3d(0, 1000px, 0);
+        transform: scale3d(.1, .1, .1) translate3d(0, 1000px, 0);
+        -webkit-animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+        animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+    }
+    60% {
+        opacity: 1;
+        -webkit-transform: scale3d(.475, .475, .475) translate3d(0, -60px, 0);
+        transform: scale3d(.475, .475, .475) translate3d(0, -60px, 0);
+        -webkit-animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1);
+        animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1);
+    }
+    }
+         
+    @-webkit-keyframes zoomInDown{
+
+        from {
+            opacity: 0;
+            -webkit-transform: scale3d(.1, .1, .1) translate3d(0, -1000px, 0);
+            transform: scale3d(.1, .1, .1) translate3d(0, -1000px, 0);
+            -webkit-animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+            animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+        }
+        60% {
+            opacity: 1;
+            -webkit-transform: scale3d(.475, .475, .475) translate3d(0, 60px, 0);
+            transform: scale3d(.475, .475, .475) translate3d(0, 60px, 0);
+            -webkit-animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1);
+            animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1);
+        }
+        }
+               
+
+.up{
+    animation: zoomInUp 0.8s;
 }
 
-.container{
-    background: #000;
-    width: 100%;
-    height: 100%;    
+.down{
+    animation: zoomInDown 0.8s;
 }
