--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,6 @@
     outline: none;
     border: none;
 }
-
-.container .page:nth-child(1){
-    background: rosybrown;
-}
-.container .page:nth-child(2){
-    background: rosybrown;
-}
-.container .page:nth-child(3){
-    background: rosybrown;
-}
-.container .page:nth-child(4){
-    background: rosybrown;
-}
 /* 自定义换页动画 */
 @-webkit-keyframes zoomInUp{
 
@@ -35,7 +22,7 @@
         animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1);
     }
     }
-         
+
     @-webkit-keyframes zoomInDown{
 
         from {
@@ -53,12 +40,15 @@
             animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1);
         }
         }
-               
+
+        
 
 .up{
-    animation: zoomInUp 0.7s;
+    -webkit-animation: zoomInUp 0.8s;
+    animation: zoomInUp 0.8s;
 }
 
 .down{
-    animation: zoomInDown 0.7s;
+    -webkit-animation: zoomInDown 0.8s;
+    animation: zoomInDown 0.8s;
 }
