--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body{font-family:Helvetica;}
 
 }
 .slogan{
+    display: block !important;
     -webkit-animation:zoomIn 0.8s;
     animation:zoomIn 0.8s;
 }
