添加动画执行前的事件回调

--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,7 @@ body{font-family:Helvetica;}
     color: #2c4c71;
 
 }
-.slogan{
-    display: block !important;
+.zoomIn{
     -webkit-animation:zoomIn 0.8s;
     animation:zoomIn 0.8s;
 }
@@ -36,8 +35,8 @@ body{font-family:Helvetica;}
 @-webkit-keyframes zoomIn{
     from {
         opacity: 0;
-        -webkit-transform: scale3d(1.2, 1.2, 1.2);
-        transform: scale3d(1.2, 1.2, 1.2);
+        -webkit-transform: scale3d(2, 2, 2);
+        transform: scale3d(2, 2, 2);
     }
     50% {
         opacity: 1;
