明天继续下面的H5页面

--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,27 @@
 }
 html{font-size:16px;}
 body{font-family:Helvetica;}
-.container div:nth-child(1){
+.arrow{
+    position:absolute;
+    bottom: 0px;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    z-index: 9999;
+    background-image: url(./../public/arrow.svg);
+    background-size:contain;
+    background-repeat:no-repeat;
+    width:30px;
+    height:30px;
+    -webkit-animation:arrowUp 1.2s linear infinite;
+    animation:arrowUp 1.2s linear infinite;
+}
+.container .element-box-1{
     background: url(./../public/page1_bg.png)  no-repeat;
     background-size:100% 100%;
     display: table;
 }
-.container div:nth-child(1) div{
+.container .element-box-1 div{
     display: table-cell;
     vertical-align: middle;
     color: #2c4c71;
@@ -21,16 +36,53 @@ body{font-family:Helvetica;}
     -webkit-animation:zoomIn 0.8s;
     animation:zoomIn 0.8s;
 }
-.container div:nth-child(1) div p{
+.container .element-box-1 div p{
     font-size: 1.6rem;
     text-align: center;
 }
-.container div:nth-child(1) div span{
+.container .element-box-1 div span{
     position: relative;
     margin-top: 10px;
     display: block;
     text-align: center;
     font-size: 1.4rem;
+}
+.element-box-4{
+    width: 100%;
+    height: 100%;
+    background-image: url(./../public/erweima_bg.png);
+    background-size: 160% 140%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.element-box-4-contents div{
+    position: absolute;
+
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+}
+.element-box-4-contents div img{
+    width: 10rem;
+    height: 10rem;
+    border-radius: 1rem;
+}
+.element-box-4-contents div p{
+    text-align: center;
+    color: white;
+    font-size: 1.2rem;
+}
+.element-box-4-contents div a{
+    display: block;
+    background-color: #1593ff;
+    font-size: 1.2rem;
+    text-decoration: none;
+    text-align: center;
+    color: white;
+    padding: 0.4rem;
+    margin-top: 10rem;
+    border-radius: 2rem;
 }
 @-webkit-keyframes zoomIn{
     from {
@@ -40,6 +92,14 @@ body{font-family:Helvetica;}
     }
     50% {
         opacity: 1;
+    }
+    }
+@-webkit-keyframes arrowUp{
+    0%{
+        transform: translateY(0px)
+    }
+    100%{
+        transform: translateY(-30px)
     }
     }
 /* 自定义换页动画 */
