--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,6 @@ body{font-family:Helvetica;}
     color: #2c4c71;
 
 }
-.zoomIn{
-    -webkit-animation:zoomIn 0.8s;
-    animation:zoomIn 0.8s;
-}
 .container .element-box-1 div p{
     font-size: 1.6rem;
     text-align: center;
@@ -55,9 +51,8 @@ body{font-family:Helvetica;}
     background-repeat: no-repeat;
     background-position: center;
 }
-.element-box-4-contents div{
+.element-box-4-contents div,.center{
     position: absolute;
-
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
@@ -84,6 +79,340 @@ body{font-family:Helvetica;}
     margin-top: 10rem;
     border-radius: 2rem;
 }
+.element-box-2,.element-box-3,.element-box-s,.element-box-4,.element-box-5{
+    background: url(./../public/page_2_bg.png);
+    background-size: 100% 100%;
+}
+.title{
+    margin-top: 3rem;    
+    padding-left: 3rem;    
+}
+.title .index{
+    position: absolute;
+    left: 0;
+    display: inline-block;
+    background:#f9da5e;
+    width:3rem;
+    height:3rem;
+    text-align: center;
+    line-height: 3rem;
+    font-size: 1.6rem;
+}
+.title .title-text{
+    display: inline-block;
+    background: url(./../public/h_bg.png);
+    background-size: 100% 100%;
+    font-size: 1rem;
+    color: white;
+    width: 100%;
+    height: 3.8rem;
+    line-height: 3.8rem;
+    padding-left: 10px;
+    margin-top: -0.4rem;
+}
+.text{
+    margin-top: 1rem;
+    position: relative;
+    padding-left: 2rem;
+    line-height: 1.6rem;
+}
+.text::before{
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0.8rem;
+    top: 0.4rem;
+    background: url(./../public/triangle.svg);
+    width: 0.6rem;
+    height: 0.6rem;
+}
+.bottom-bg {
+    position: absolute;
+    left: 0px;
+    bottom: 2rem;
+    background-image: url(./../public/page_2_bottom.png);
+    width: 100%;
+    height: 2rem;
+    background-size: 6% 30%;
+    background-repeat: repeat-x;
+}
+.element-box-2-contents img{
+    width: 38%;
+    border: none;
+    float: left;
+    margin: 20% 6% 0 6%;
+}
+.img-row{
+    overflow: hidden;
+    position: relative;
+    left: 2%;
+}
+.img-center{
+    width: 50%;
+}
+.img-row img{
+    display: block;
+    float: left;
+    width: 30%;
+    height: 30%;
+    margin: 1rem 1% 0 1%;
+}
+.element-box-s-contents{
+    width: 100%;
+    height: 100%;
+}
+.element-box-s-contents img{
+    display: block;
+    margin: 4% 10%;
+    width: 80%;
+    height: 34%;
+    -webkit-transition:-webkit-transform 0.8s;
+    transition: transform 0.8s;
+}
+.zoominL{
+    opacity: 0;
+    -webkit-transform: translateX(-1000px);
+    transform: translateX(-1000px);
+}
+.zoominLAni{
+    opacity: 1;
+    -webkit-transform:translateX(0px);
+    transform:translateX(0px);
+    -webkit-animation: jello 1s 0.8s;
+    animation: jello 1s 0.8s;
+}
+
+.zoominR{
+    opacity: 0;
+    -webkit-transform: translateX(1000px);
+    transform: translateX(1000px);
+}
+.zoominRAni{
+    opacity: 1;
+    -webkit-transform:translateX(0px);
+    transform:translateX(0px);
+    -webkit-animation: jello 1s 0.8s;
+    animation: jello 1s 0.8s;
+}
+.element-box-5-contents img{
+    display: block;
+    margin: 8% auto 0 auto;
+    -webkit-transition:-webkit-transform 0.8s;
+    transition: transform 0.8s;
+}
+.rotateLeft{
+    width: 60%;
+    -webkit-transform-origin: left bottom;
+    transform-origin: left bottom;
+    -webkit-transform: rotate3d(0, 0, 1, 45deg);
+    transform: rotate3d(0, 0, 1, 45deg);
+    opacity: 0;
+}
+.rotateRight{
+    width: 40%;
+    -webkit-transform-origin: right bottom;
+    transform-origin: right bottom;
+    -webkit-transform: rotate3d(0, 0, 1, -45deg);
+    transform: rotate3d(0, 0, 1, -45deg);
+    opacity: 0;
+}
+.rotateLeftAni{
+    -webkit-transform-origin: left bottom;
+    transform-origin: left bottom;
+    -webkit-transform: none;
+    transform: none;
+    opacity: 1;
+}
+.rotateRightAni{
+    -webkit-transform-origin: right bottom;
+    transform-origin: right bottom;
+    -webkit-transform: none;
+    transform: none;
+    opacity: 1;
+}
+.element-box-6-contents img{
+    width: 34%;
+    display: block;
+    position: absolute;
+}
+.img-box{
+    position:relative;
+    margin-top:1rem;
+    width: 100%;
+    left:50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+}
+.p1{
+    top: 0;
+    left: 6%;
+    z-index: 4;
+    opacity: 0;
+    -webkit-transition: opacity 0.3s ;
+    transition: opacity 0.3s ;
+}
+.p2{
+    top: 2rem;
+    left: 18%;
+    z-index: 3;
+    opacity: 0;
+    -webkit-transition: opacity 0.3s 0.3s;
+    transition: opacity 0.3s 0.3s;
+}
+.p3{
+    top: 4rem;
+    left: 38%;
+    z-index: 2;
+    opacity: 0;
+    -webkit-transition: opacity 0.3s 0.6s;
+    transition: opacity 0.3s 0.6s;
+}
+.p4{
+    top: 6rem;
+    left: 60%;
+    z-index: 1;
+    opacity: 0;
+    -webkit-transition: opacity 0.3s 0.9s;
+    transition: opacity 0.3s 0.9s;
+}
+.p1Ani{
+    opacity: 1;
+    -webkit-animation: bounceIn 1s ease 0s 1 normal both;
+    animation: bounceIn 1s ease 0s 1 normal both;
+}
+.p2Ani{
+opacity: 1;
+-webkit-animation: bounceIn 1s ease 0.5s 1 normal both;
+animation: bounceIn 1s ease 0.5s 1 normal both;
+}
+.p3Ani{
+opacity: 1;
+-webkit-animation: bounceIn 1s ease 1s 1 normal both;
+animation: bounceIn 1s ease 1s 1 normal both;
+}
+.p4Ani{
+opacity: 1;
+-webkit-animation: bounceIn 1s ease 1.5s 1 normal both;
+animation: bounceIn 1s ease 1.5s 1 normal both;
+}
+
+@-webkit-keyframes jello{
+    from, 11.1%, to {
+        -webkit-transform: none;
+        transform: none;
+    }
+    22.2% {
+        -webkit-transform: skewX(-12.5deg) skewY(-12.5deg);
+        transform: skewX(-12.5deg) skewY(-12.5deg);
+    }
+    33.3% {
+        -webkit-transform: skewX(6.25deg) skewY(6.25deg);
+        transform: skewX(6.25deg) skewY(6.25deg);
+    }
+    44.4% {
+        -webkit-transform: skewX(-3.125deg) skewY(-3.125deg);
+        transform: skewX(-3.125deg) skewY(-3.125deg);
+    }
+    55.5% {
+        -webkit-transform: skewX(1.5625deg) skewY(1.5625deg);
+        transform: skewX(1.5625deg) skewY(1.5625deg);
+    }
+    66.6% {
+        -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg);
+        transform: skewX(-0.78125deg) skewY(-0.78125deg);
+    }
+    77.7% {
+        -webkit-transform: skewX(0.390625deg) skewY(0.390625deg);
+        transform: skewX(0.390625deg) skewY(0.390625deg);
+    }
+    88.8% {
+        -webkit-transform: skewX(-0.1953125deg) skewY(-0.1953125deg);
+        transform: skewX(-0.1953125deg) skewY(-0.1953125deg);
+    }
+}
+@-webkit-keyframes zoomInRight{
+
+    from {
+        opacity: 0;
+        -webkit-transform: scale3d(.1, .1, .1) translate3d(1000px, 0, 0);
+        transform: scale3d(.1, .1, .1) translate3d(1000px, 0, 0);
+        -webkit-animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+        animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+    }
+    60% {
+        opacity: 1;
+        -webkit-transform: scale3d(.475, .475, .475) translate3d(-10px, 0, 0);
+        transform: scale3d(.475, .475, .475) translate3d(-10px, 0, 0);
+        -webkit-animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1);
+        animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1);
+    }
+}
+           
+         
+
+@-webkit-keyframes swing{
+        from {
+            -webkit-transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
+            transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
+            -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+            opacity: 0;
+        }
+        40% {
+            -webkit-transform: perspective(400px) rotate3d(0, 1, 0, -20deg);
+            transform: perspective(400px) rotate3d(0, 1, 0, -20deg);
+            -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+        }
+        60% {
+            -webkit-transform: perspective(400px) rotate3d(0, 1, 0, 10deg);
+            transform: perspective(400px) rotate3d(0, 1, 0, 10deg);
+            opacity: 1;
+        }
+        80% {
+            -webkit-transform: perspective(400px) rotate3d(0, 1, 0, -5deg);
+            transform: perspective(400px) rotate3d(0, 1, 0, -5deg);
+        }
+        to {
+            -webkit-transform: perspective(400px);
+            transform: perspective(400px);
+        }
+    }
+
+@-webkit-keyframes bounceIn{
+
+    from, 20%, 40%, 60%, 80%, to {
+        -webkit-animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+        animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    }
+    0% {
+        opacity: 0;
+        -webkit-transform: scale3d(.3, .3, .3);
+        transform: scale3d(.3, .3, .3);
+    }
+    20% {
+        -webkit-transform: scale3d(1.1, 1.1, 1.1);
+        transform: scale3d(1.1, 1.1, 1.1);
+    }
+    40% {
+        -webkit-transform: scale3d(.9, .9, .9);
+        transform: scale3d(.9, .9, .9);
+    }
+    60% {
+        opacity: 1;
+        -webkit-transform: scale3d(1.03, 1.03, 1.03);
+        transform: scale3d(1.03, 1.03, 1.03);
+    }
+    80% {
+        -webkit-transform: scale3d(.97, .97, .97);
+        transform: scale3d(.97, .97, .97);
+    }
+    to {
+        opacity: 1;
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(1, 1, 1);
+    }
+    }
 @-webkit-keyframes zoomIn{
     from {
         opacity: 0;
@@ -96,10 +425,25 @@ body{font-family:Helvetica;}
     }
 @-webkit-keyframes arrowUp{
     0%{
-        transform: translateY(0px)
+        -webkit-transform: translateY(0px);
+        transform: translateY(0px);
     }
     100%{
-        transform: translateY(-30px)
+        -webkit-transform: translateY(-30px);
+        transform: translateY(-30px);
+    }
+    }
+@-webkit-keyframes fadeInLeft{
+
+    from {
+        opacity: 0;
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0);
+    }
+    to {
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
     }
     }
 /* 自定义换页动画 */
